--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondogeneral"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/texto2"
-        android:layout_width="339dp"
-        android:layout_height="132dp"
-        android:background="@android:color/holo_blue_light"
-        android:fontFamily="@font/gra"
-        android:gravity="center"
-        android:text="TU CORRESPONSAL BANCARIO VIRTUAL"
-        android:textColor="@android:color/background_dark"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+    android:background="@drawable/fondo"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/ingresoGeneral"
@@ -34,34 +18,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953" />
-
-    <TextView
-        android:id="@+id/texto"
-        android:layout_width="285dp"
-        android:layout_height="65dp"
-        android:background="@android:color/holo_blue_light"
-        android:fontFamily="@font/gra"
-        android:gravity="center"
-        android:text="¡PAGA APP!"
-        android:textColor="@android:color/background_dark"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.112" />
+        app:layout_constraintVertical_bias="0.847" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="287dp"
-        android:layout_height="222dp"
+        android:layout_width="396dp"
+        android:layout_height="348dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.402"
-        app:srcCompat="@drawable/logofinal" />
+        app:layout_constraintVertical_bias="0.498"
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
